syntax = "proto3";

package graphprotocol.indexer.dips;

service IndexerDipsService {
  /**
   * Propose a new _indexing agreement_ to an _indexer_.
   *
   * The _indexer_ can `ACCEPT` or `REJECT` the agreement.
   */
  rpc SubmitAgreementProposal(SubmitAgreementProposalRequest) returns (SubmitAgreementProposalResponse);

  /**
   * Request to cancel an existing _indexing agreement_.
   */
  rpc CancelAgreement(CancelAgreementRequest) returns (CancelAgreementResponse);
}

/**
 * A request to propose a new _indexing agreement_ to an _indexer_.
 *
 * See the `DipsService.SubmitAgreementProposal` method.
 */
message SubmitAgreementProposalRequest {
  uint64 version = 1;
  bytes signed_voucher = 2; /// An ERC-712 signed indexing agreement voucher
}

/**
 * A response to a request to propose a new _indexing agreement_ to an _indexer_.
 *
 * See the `DipsService.SubmitAgreementProposal` method.
 */
message SubmitAgreementProposalResponse {
  ProposalResponse response = 1; /// The response to the agreement proposal.
  RejectReason reject_reason = 2; /// Only set when response = REJECT.
}

/**
 * The response to an _indexing agreement_ proposal.
 */
enum ProposalResponse {
  ACCEPT = 0; /// The agreement proposal was accepted.
  REJECT = 1; /// The agreement proposal was rejected.
}

/**
 * The reason for rejecting an _indexing agreement_ proposal.
 * Only meaningful when ProposalResponse = REJECT.
 */
enum RejectReason {
  REJECT_REASON_UNSPECIFIED = 0; /// Default / not set (used for ACCEPT responses).
  PRICE_TOO_LOW = 1;             /// The offered price is below the indexer's minimum.
  OTHER = 2;                     /// Any other reason (unsupported network, bad signature, etc.).
}

/**
 * A request to cancel an _indexing agreement_.
 *
 * See the `DipsService.CancelAgreement` method.
 */
message CancelAgreementRequest {
  uint64 version = 1;
  bytes signed_cancellation = 2;  /// a signed ERC-712 message cancelling an agreement
}

/**
 * A response to a request to cancel an existing _indexing agreement_.
 *
 * See the `DipsService.CancelAgreement` method.
 */
message CancelAgreementResponse {
  // Empty message, eventually we may add custom status codes
}
